interactive-queries/k8s-resources/wordcount-iq-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordcount-iq-lb
  namespace: interactive-queries
  labels:
    app: wordcount-iq
spec:
  ports:
  - name: external
    port: 9080
  clusterIP: None
  selector:
    app: wordcount-iq
